objects/Lead.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>Service</fullName>
        <description>used for OneSource</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Distributor</fullName>
        </values>
        <values>
            <fullName>Future-Nurturing</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>Used by LST &amp; ENV Business Units</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Distributor</fullName>
        </values>
        <values>
            <fullName>Future-Nurturing</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Informatics</fullName>
        <description>This process is dedicated for Informatics</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Distributor</fullName>
        </values>
        <values>
            <fullName>Future-Nurturing</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SDx Process</fullName>
        <description>Diagnostics</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Distributor</fullName>
        </values>
        <values>
            <fullName>Future-Nurturing</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BE__c</fullName>
        <description>Business Element/Business Unit</description>
        <inlineHelpText>Primary Business Unit for this Lead</inlineHelpText>
        <label>BE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dx</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>SVC</fullName>
                </value>
                <value>
                    <fullName>ONE</fullName>
                </value>
                <value>
                    <fullName>EH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LEADS assigned to a lead owner that is not a queue will have this field checked to be true in the system via backend</description>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <label>SIC</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check DMQL when lead is coming directly to a sales rep from SAP Web MEthods</description>
        <label>DMQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GROW__c</fullName>
        <formula>IF(NOT(ISBLANK( Employee_Email__c )),IMAGE(&quot;/servlet/servlet.FileDownload?file=0153A000004RF8J&quot;, &quot;Grow&quot;, 30,30),&quot;&quot;)</formula>
        <label>GROW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Management</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Farmer/Grower</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Regulatory/Compliance</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;https://na45.salesforce.com/&quot; +  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Dx__c</fullName>
        <formula>AND
(
 INCLUDES(BE__c, &quot;Dx&quot;),
NOT(INCLUDES(BE__c,&quot;SVC&quot;)),
NOT(INCLUDES(BE__c,&quot;INF&quot;)),
NOT(INCLUDES(BE__c,&quot;LST&quot;)),
NOT(INCLUDES(BE__c,&quot;MED&quot;)),
NOT(INCLUDES(BE__c,&quot;ONE&quot;)),
NOT(INCLUDES(BE__c,&quot;EH&quot;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Dx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QACid__c</fullName>
        <label>QACid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_INF__c</fullName>
        <label>BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASLS</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>SVC</fullName>
                </value>
                <value>
                    <fullName>IDS</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>EDx</fullName>
                </value>
                <value>
                    <fullName>Dx</fullName>
                </value>
                <value>
                    <fullName>SDx</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NONMQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ALL LEADS coming to the marketing queue will get assigned as NONMQL</description>
        <label>NONMQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Originator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Triage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AA_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AA List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GC_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GC List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IR_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IR List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LC_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LC List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LQS_Air__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Air</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_CO__c</fullName>
        <label>Last CO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Business Strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALH_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALH List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMER_INF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANP_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ANP List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BioFuels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BioFuels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESS_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FGP_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FGP List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLR_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FLR List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDS_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICP_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICP List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGOR_PAC__c</fullName>
        <label>IGOR_PAC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMG_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IMG List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVI_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LVI List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MLD_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MLD List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRD_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RRD List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAT_Code__c</fullName>
        <label>SAT Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAT_Date__c</fullName>
        <label>SAT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Maintenance</fullName>
                </value>
                <value>
                    <fullName>Triage</fullName>
                </value>
                <value>
                    <fullName>MVV</fullName>
                </value>
                <value>
                    <fullName>MVC</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEA_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEA List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>12+ months</fullName>
                </value>
                <value>
                    <fullName>We’ve already engaged a partner</fullName>
                </value>
                <value>
                    <fullName>We don’t have any current plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UVS_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UVS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chip_Type__c</fullName>
        <label>Chip Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affymetrix</fullName>
                </value>
                <value>
                    <fullName>CodeLink</fullName>
                </value>
                <value>
                    <fullName>Illumina</fullName>
                </value>
                <value>
                    <fullName>Agilent</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LQS_Water__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Water</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OneSource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_PAA__c</fullName>
        <inlineHelpText>Please enter the Product Application Area</inlineHelpText>
        <label>Other PAA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <description>Field to fetch the Owner name, it could be both User or Queue</description>
        <formula>IF(ISBLANK( Owner:Queue.Id ),Owner:User.FirstName &amp;  Owner:User.LastName,Owner:Queue.QueueName  )</formula>
        <label>OwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this check-box when a lead is &quot; Qualified&quot;</description>
        <inlineHelpText>Check this check-box when a lead is &quot; Qualified&quot;</inlineHelpText>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_INF__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic_INF__c</fullName>
        <label>Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allow_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LST Requested Checkbox Feb14 - GM</description>
        <inlineHelpText>Check box if this person is a competitor to exclude from future emails.</inlineHelpText>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Marketing Activity Type</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tradeshows</fullName>
                </value>
                <value>
                    <fullName>Web-cast</fullName>
                </value>
                <value>
                    <fullName>Virtual Booth</fullName>
                </value>
                <value>
                    <fullName>PKI Web-site</fullName>
                </value>
                <value>
                    <fullName>E-mail Campaign</fullName>
                </value>
                <value>
                    <fullName>On-line Newsletter</fullName>
                </value>
                <value>
                    <fullName>On-line BuyerGuides/Directories</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Usergroups</fullName>
                </value>
                <value>
                    <fullName>Workshops</fullName>
                </value>
                <value>
                    <fullName>Blitz</fullName>
                </value>
                <value>
                    <fullName>Vendor Show</fullName>
                </value>
                <value>
                    <fullName>Account Specific Event</fullName>
                </value>
                <value>
                    <fullName>Customer Event</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Promotional Items</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>BuyerGuides/Directories</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>ISR Outbound Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_OOP_Day__c</fullName>
        <description>Gets stamped with Saturday or Sunday</description>
        <label>HC OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_OOP_Day__c</fullName>
        <description>Gets stamped with Saturday or Sunday</description>
        <label>HD OOP Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICPMS_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICPMS List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LQS_Energy__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Energy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bonus Leads</fullName>
                </value>
                <value>
                    <fullName>Direct Mail/EMail</fullName>
                </value>
                <value>
                    <fullName>Directory/Buyer guide</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>News Release</fullName>
                </value>
                <value>
                    <fullName>Paid Media</fullName>
                </value>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Tradeshows</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAMAN_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RAMAN List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAT_Amount__c</fullName>
        <label>SAT Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Air__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Status - Air</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Turnback - Call Attempts Complete</fullName>
                </value>
                <value>
                    <fullName>Turnback - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>Turnback - Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Rejected - Bad Contact Details</fullName>
                </value>
                <value>
                    <fullName>Rejected - Not Involved</fullName>
                </value>
                <value>
                    <fullName>Rejected - Distributor</fullName>
                </value>
                <value>
                    <fullName>Rejected - No Interest</fullName>
                </value>
                <value>
                    <fullName>Converted to Opportunity</fullName>
                </value>
                <value>
                    <fullName>Re-Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Re-Qualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>